# SeaBattle

./: .clang-uml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/diagrams/: full_class_diagram.puml  lb2_class_diagram.puml  lb3_class_diagram.puml  lb3_class_diagram_1.puml  lb3_class_diagram_2.puml  lb4_class_diagram.puml
src/: main.cc
src/core/: game.cc  game.h
src/core/abilities/: ability.h  bombardment.cc  bombardment.h  double_damage.cc  double_damage.h  scanner.cc  scanner.h
src/core/entities/: game_field.cc  game_field.h  ship.cc  ship.h
src/core/managers/: ability_manager.cc  ability_manager.h  ship_manager.cc  ship_manager.h
src/core/registries/: ability_registry.cc  ability_registry.h  registry.h  state_registry.cc  state_registry.h
src/core/states/: bot_move.cc  bot_move.h  place_ships.cc  place_ships.h  player_move.cc  player_move.h  setup_bot.cc  setup_bot.h  setup_field.cc  setup_field.h  setup_ships_lengths.cc  setup_ships_lengths.h  state.cc  state.h
src/core/values/: area.cc  area.h  coordinates.cc  coordinates.h
src/errors/: ability_not_registered_error.h  cannot_place_bot_ships_error.h  game_error.h  impossible_ship_position_error.h  invalid_coordinates_error.h  no_abilities_for_application_error.h
src/input/: command.h  controls.cc  controls.h  game_controller.h
src/input/cli/: console_parser.cc  console_parser.h
src/output/: game_renderer.h
src/output/cli/: console_renderer.cc  console_renderer.h
src/utilities/: random_generator.cc  random_generator.h
(+6 files in other folders)
